shady-KISS-skin History
-------------------------------------------

2015-02-22:
- Reimplemented support for plexplugin

2016-02-19:
- Adjusted y-values in displayreplay, reverted last commit
- Removed debug in displayreplay

2016-02-18:
- Changed scrapercontent in displayreplay from shifting to fading

2016-02-17:
- Added setup for main- and setupmenulist on the left or right side

2016-02-14:
- Fixed typo in displaymenumain
- Added setup for poster and EPGpic in detailinfos 

2016-02-13:
- Fixed posterBGDetail in detailepg
- Special treatment for div views with only one column (displaymenudefault)
- Adjusted scrollheight in tab actors (hopefully fixed)
- Reduced fontsize of timerstart-timerstop in timersmenu if only 12 listitems are shown
- Reactivated fadetimes
- Deactivated shift- and fadetime in audiotracks (actually in this view not supported by skindesigner)
- Enlarged fontsize of reruns in menudetetailepg if only 12 listitems are shown
- Setup for fadetimes of timers and lastrecs, disc, temps, load and weather in mainmenu

2016-02-12:
- Fixed scaling of videowindow in weatherforecast
- Changed {epgname} to {name} menurecordings
- Adjusted scrollheight in tab actors
- Fixed rectitle in displayreplay 

2016-02-10:
- Adapted for skindesigner-0.8.x

2016-02-05:
- Fixed conditions in displaymenudetailrecording
- Fixed conditions in displaymenudetailepg and tvguideng-detail

2016-02-03:
- Added wide currentelement in channelsmenu
- Fixed presenteventduration in channelsmenu

2016-02-02:
- Fixed width of markers
- Fixed columns in displaymenurecordings
- Added setup to show only timers and infos in mainmenu
- Reduced height of textboxes in all currentelements

2016-02-01
- Added {date} for WHATSONFAVORITES
- Added wide currentelement in schedules, timers and recordings

2016-01-31:
- Fixed area of {timerstart} - {timerstop} in displaymenutimers
- Fixed needless display of posterbackgrounds in currentelements

2016-01-21:
- Fixed conditions for neutrinoepg